지마켓 ui 만들기에서 사진 번호 추가

--- a/ex0625/cssPractice12.html
+++ b/ex0625/cssPractice12.html
@@ -150,7 +150,7 @@
             background-color: coral;
             font-size: 15px;
             position: absolute;
-            bottom: 0;
+            bottom: 10px;
         }
         #cmRight {
             width: 70%;
@@ -161,7 +161,7 @@
             text-align: right;
             position: absolute;
             left: 30%;
-            bottom: 0;
+            bottom: 10px;
         }
         #centerbottom {
             width: 100%;
@@ -180,6 +180,21 @@
             border: 1px solid blueviolet;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+        }
+        .num1 {
+            width: 35px;
+            height: 35px;
+            border: 1px solid black;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            background-color: blueviolet;
+            position: absolute;
+            top: 10px;
+            left: 15px;
         }
         .imgbox2 {
             width: 20%;
@@ -192,6 +207,21 @@
             border: 1px solid blueviolet;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+        }
+        .num2 {
+            width: 35px;
+            height: 35px;
+            border: 1px solid black;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            background-color: blueviolet;
+            position: absolute;
+            top: 10px;
+            left: 15px;
         }
         .imgbox3 {
             width: 20%;
@@ -204,6 +234,21 @@
             border: 1px solid blueviolet;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+        }
+        .num3 {
+            width: 35px;
+            height: 35px;
+            border: 1px solid black;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            background-color: blueviolet;
+            position: absolute;
+            top: 10px;
+            left: 15px;
         }
         .imgbox4 {
             width: 20%;
@@ -216,6 +261,21 @@
             border: 1px solid blueviolet;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+        }
+        .num4 {
+            width: 35px;
+            height: 35px;
+            border: 1px solid black;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            background-color: blueviolet;
+            position: absolute;
+            top: 10px;
+            left: 15px;
         }
         .imgbox5 {
             width: 20%;
@@ -228,6 +288,21 @@
             border: 1px solid blueviolet;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+        }
+        .num5 {
+            width: 35px;
+            height: 35px;
+            border: 1px solid black;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            background-color: blueviolet;
+            position: absolute;
+            top: 10px;
+            left: 15px;
         }
     </style>
 </head>
@@ -287,11 +362,21 @@
             <div id="cmRight">전체보기</div>
         </div>
         <div id="centerbottom">
-            <div class="imgbox1"></div>
-            <div class="imgbox2"></div>
-            <div class="imgbox3"></div>
-            <div class="imgbox4"></div>
-            <div class="imgbox5"></div>
+            <div class="imgbox1">
+                <div class="num1">1</div>
+            </div>
+            <div class="imgbox2">
+                <div class="num2">2</div>
+            </div>
+            <div class="imgbox3">
+                <div class="num3">3</div>
+            </div>            
+            <div class="imgbox4">
+                <div class="num4">4</div>
+            </div>            
+            <div class="imgbox5">
+                <div class="num5">5</div>
+            </div>
         </div>
     </div>
 </body>
