--- a/ex0625/cssPractice12.html
+++ b/ex0625/cssPractice12.html
@@ -19,14 +19,12 @@
         }
         #top {
             width: 100%;
-            background-color: yellowgreen;
             font-size: 0;
         }
         #logo {
             width: 15%;
             height: 50px;
             display: inline-block;
-            background-color: violet;
             background-image: url("/img/gmarket.jpg");
             background-size: contain;
             background-position: center;
@@ -35,8 +33,7 @@
         #search {
             width: 60%;
             height: 50px;
-            display: inline-block;
-            background-color: tomato;       
+            display: inline-block;     
             vertical-align: top;
         }
         #search>div {
@@ -55,27 +52,25 @@
             width: 25%;
             height: 50px;
             display: inline-block;
-            background-color: turquoise;
             vertical-align: top;
         }
         #icons>div {
             width: 32%;
             margin-top: 1px;
-            border: 1px solid black;
             font-size: 35px;
             text-align: center;
             display: inline-block;
         }
         #menubar {
             width: 100%;
-            background-color: coral;
             font-size: 0;
             vertical-align: top;
         }
         #allcategory {
             width: 25%;
             height: 40px;
-            background-color: darkcyan;
+            background-color: green;
+            color: white;
             display: inline-block;
             font-size: 20px;
         }
@@ -86,7 +81,6 @@
         #menuleft {
             width: 45%;
             height: 40px;
-            background-color: darkgrey;
             display: inline-block;
             font-size: 20px;
         }
@@ -98,7 +92,6 @@
         #menuright {
             width: 30%;
             height: 40px;
-            background-color: yellow;
             display: inline-block;
             font-size: 20px;
         }
@@ -109,26 +102,27 @@
         }
         #centertop {
             width: 100%;
-            background-color: violet;
             font-size: 0;
         }
         #categories {
             width: 25%;
-            height: 400px;
-            background-color: turquoise;
+            height: 450px;
+            background-color: #52d14e;
+            color: white;
             display: inline-block;
             vertical-align: top;
         }
         #categories li {
             list-style: none;
-            padding: 11px;
+            height: 50px;
+            padding: 13px;
             text-align: center;
             font-size: 15px;
-            border: 1px solid black;
+            border-bottom: 1px solid black;
         }
         #mainbanner {
             width: 75%;
-            height: 400px;
+            height: 450px;
             background-image: url("/img/gbanner.png");
             background-size: contain;
             background-position: center;
@@ -141,13 +135,11 @@
             height: 80px;
             font-size: 0;
             position: relative;
-            background-color: wheat;
         }
         #cmLeft {
             width: 30%;
             height: 20px;
             display: inline-block;
-            background-color: coral;
             font-size: 15px;
             position: absolute;
             bottom: 10px;
@@ -156,7 +148,6 @@
             width: 70%;
             height: 20px;
             display: inline-block;
-            background-color: cornflowerblue;
             font-size: 15px;
             text-align: right;
             position: absolute;
@@ -166,7 +157,6 @@
         #centerbottom {
             width: 100%;
             height: 200px;
-            background-color: lightblue;
             font-size: 0;
         }
         .imgbox1 {
