기아 자동차 예제 이미지 부분 약간 수정

--- a/ex0628/cssPractice17.html
+++ b/ex0628/cssPractice17.html
@@ -19,7 +19,7 @@
             width: 100%;
             margin: 0 auto;
         }
-        /* .mainImg {
+        .mainImg {
             width: 100%;
             height: 1281px;
             background-color: blue;
@@ -30,13 +30,13 @@
             position: absolute;
             top: 0;
             z-index: -1;
-        } */
-        img {
+        }
+        /* img {
             width: 100%;
             height: auto;
             position: absolute;
             z-index: -1;
-        }
+        } */
         .top {
             width: 100%;
             height: 100px;
@@ -113,8 +113,8 @@
 
 <body>
     <div id="wrap">
-        <!-- <div class="mainImg"></div> -->
-        <img src="/img/building.jpg" alt="">
+        <div class="mainImg"></div>
+        <!-- <img src="/img/building.jpg" alt=""> -->
         <div class="top">
             <div class="logo">
                 <p>KIA</p>
