약간의 오타 수정

--- a/ex0629/css48.html
+++ b/ex0629/css48.html
@@ -27,7 +27,7 @@
 
         .sub {
             position: absolute;
-            /*절때로 위치가 현 ul을 싸고 있는 li를 벗어나지 말것!*/
+            /*절대로 위치가 현 ul을 싸고 있는 li를 벗어나지 말 것!*/
         }
 
         .sub {
