--- a/ex0629/css53.html
+++ b/ex0629/css53.html
@@ -81,7 +81,7 @@
 <body>
     <div class="box box1">
         <img src="/img/dog4.jpg">
-        <div>AOA</div>
+        <div>BORI</div>
     </div>
 
     <div class="box box2">
