0705 수업 주석 추가

--- a/ex0705/css83.html
+++ b/ex0705/css83.html
@@ -28,6 +28,8 @@
             margin-top: 1%;
             font-size: 0;/*이미지 때문에 밑에 살짝 생기는 공간을 없애기 위해서*/
             max-height: 400px;/*없어도 상관 없음*/
+            /*안에 아무리 큰 게 들어와도 이 칸은 400px로 고정이다!
+            다만 더 작은 게 들어오면 알아서 줄어든다!*/
             overflow: hidden;/*없어도 상관 없음*/
         }
         .banner img {
