--- a/ex0712/jq8.html
+++ b/ex0712/jq8.html
@@ -16,12 +16,13 @@
     <script>
         $(document).ready(function () {
             $("button").click(function () {
-                // $("#p1").css("color", "red").slideUp(2000).slideDown(2000);
+                $("#p1").css("color", "red").slideUp(2000).slideDown(2000);
+                
                 // 체이닝이란 하나의 객체에 여러가지 메서드들을 차례로 엮어서 순서대로 실행하게 하는 기법
                 
-                $("#p1").css("color", "red");
-                $("#p1").slideUp(2000);
-                $("#p1").slideDown(2000);
+                // $("#p1").css("color", "red");
+                // $("#p1").slideUp(2000);
+                // $("#p1").slideDown(2000);
             });
         });
     </script>
