0714 예제 약간 수정, 개인플젝 파일 추가

--- a/ex0714/jq31.html
+++ b/ex0714/jq31.html
@@ -51,7 +51,7 @@
         $(function() {
             // 기본 스크롤은 브라우저가 만들어주는 것이라서 window선택자에 달아야 한다!
             $(window).scroll(function() {
-                //$(".info").text($(window).scrollTop());
+                $(".info").text($(window).scrollTop());
             });
         });
     </script>
