--- a/project/UIproject_main.html
+++ b/project/UIproject_main.html
@@ -308,9 +308,73 @@
         .sec2atc3 div.sec2atc3img4 {
             background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/sec2_bg4.jpg");
         }
+        .sec2atc4 {
+            width: 100%;
+            margin-top: 5%;
+            background-color: rgb(50, 207, 50);
+            color: white;
+            font-size: 14px;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+        .sec2atc4 b {
+            font-size: 20px;
+        }
+        .sec2atc4 p {
+            letter-spacing: -2px;
+            word-spacing: 3px;
+        }
+        .sec2atc4 div:nth-child(1) {
+            width: 65%;
+            margin: 5% auto;
+        }
+        .sec2atc4 div:nth-child(2) {
+            width: 30%;
+            margin: 5% auto;
+            border: 1px solid white;
+            text-align: center;
+            display: table;
+            table-layout: fixed;
+        }
+        .sec2atc4 div:nth-child(2):hover {
+            color: rgb(50, 207, 50);
+            background-color: white;
+        }
+        .sec2atc4 div:nth-child(2):hover a {
+            color: rgb(50, 207, 50);
+        }
+        .sec2atc4 div:nth-child(2) a {
+            width: 62%;
+            display: table-cell;
+            vertical-align: middle;
+            color: white;
+            font-size: 14px;
+            font-weight: 600;
+        }
+        .sec2atc4 div:nth-child(2) i {
+            width: 38%;
+            vertical-align: middle;
+            display: none;
+        }
         .sec3 {
             background-color: yellow;
         }
+        .sec3atc1 {
+            border: 1px solid red;
+            text-align: center;
+            font-size: 14px;
+        }
+        .sec3atc1 p:first-child {
+            margin: 5%;
+            font-size: 30px;
+            font-weight: bold;
+        }
+        .sec3atc1 p:last-child {
+            margin: 5%;
+            word-break: keep-all;
+        }
+        
         .sec4 {
             background-color: pink;
         }
@@ -322,8 +386,44 @@
         }
         footer {
             width: 100%;
-            height: 300px;
-            background-color: rgb(199, 231, 19);
+            padding: 5%;
+            background-color: rgb(51, 51, 51);
+            color: rgba(179, 177, 177, 0.877);
+            font-size: 14px;
+        }
+        footer .logo {
+            width: 150px;
+            height: 40px;
+            margin: 0 auto;
+        }
+        footer .companyInfo {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .companyInfo p:nth-child(3) {
+            color: rgba(94, 93, 93, 0.877);
+            margin: 20px;
+        }
+        .question {
+            width: 200px;
+            height: 60px;
+            margin: 0 auto;
+            border: 1px solid white;
+            text-align: center;
+            display: table;
+        }
+        .question a {
+            color: white;
+            font-size: 16px;
+            font-weight: 600;
+            display: table-cell;
+            vertical-align: middle;
+        }
+        .question:hover {
+            background-color: white;
+        }
+        .question:hover a {
+            color: rgb(51, 51, 51);
         }
         .goTop {/*맨위로 가는 화살표*/
             width: 50px;
@@ -398,9 +498,10 @@
             .sec2 .sec2atc2 {
                 font-size: 20px;
                 color: rgba(0, 0, 0, 0.644);
+                margin-bottom: 3%;
             }
             .sec2atc3 {
-                width: 100%;
+                width: 75%;
                 height: 500px;
                 font-size: larger;
                 word-break: keep-all;
@@ -454,6 +555,51 @@
             .upDiv:hover div {
                 opacity: 1;
             }
+             .sec2atc4 b {
+                 font-size: 40px;
+             }
+             .sec2atc4 p {
+                 font-size: 17px;
+                 letter-spacing: normal;
+                 word-spacing: normal;
+             }
+             .sec2atc4 div:nth-child(1) {
+                 width: 35%;
+                 margin: 2% auto;
+             }
+             .sec2atc4 div:nth-child(2) {
+                 width: 17%;
+                 height: 65px;
+                 margin: auto;
+             }
+             .sec2atc4 div:nth-child(2) a {
+                 font-size: 18px;
+             }
+             .sec2atc4 div:nth-child(2) i {
+                 font-size: 50px;
+                 padding: 0 auto;
+                 display: table-cell;
+             }
+             footer {
+                 padding: 3%;
+                 padding-bottom: 6%;
+                 display: flex;
+                 flex-flow: row wrap;
+                 justify-content: space-between;
+             }
+             footer .logo {
+                 width: 200px;
+                 height: 100%;
+             }
+             footer .companyInfo {
+                 width: 60%;
+                 margin-top: 0;
+                 text-align: left;
+             }
+             .companyInfo p:nth-child(3) {
+                 margin: 0;
+                 margin-top: 20px;
+             }
         }
 
         /*마우스 굴리는 애니메이션*/
@@ -486,7 +632,7 @@
                     <li><a href=""><span>공지사항</span><span class="under"></span></a></li>
                     <li><a href=""><span>문의</span><span class="under"></span></a></li>
                 </ul>
-                <a href="UIProject_login.html"><i class="fab fa-keycdn"></i></a>
+                <a href="UIProject_login.html" title="관리자로그인"><i class="fab fa-keycdn"></i></a>
             </div>
         </nav>
 
@@ -557,17 +703,65 @@
                 </div>
             </article>
             <article class="sec2atc4">
-                <div><p>문의하기</p></div>
-                <div><p>문의사항을 남겨주시면 빠른 시일내에 답변드리겠습니다.</p></div>
-                <div>문의 바로가기</div>
+                <div>
+                    <b>문의하기</b>
+                    <p>문의사항을 남겨주시면 빠른 시일내에 답변드리겠습니다.</p>
+                </div>
+                <div>
+                    <a href="">문의 바로가기</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
             </article>
         </section>
 
-        <section class="page sec3"></section>
+        <section class="page sec3">
+            <article class="sec3atc1">
+                <p>ONE-STOP 설계 구축</p>
+                <p>제안 단계부터 설계, 구축 및 유지보수까지, One-Stop 서비스를 제공합니다.<br>모든 과정은 INIT이 직접 관리하고 서비스합니다.</p>
+            </article>
+            <article class="sec3atc2 showbox">
+                <div class="movebox">
+                    <div class="sec3atc2img1">
+                        <p><b>시스템 인프라</b></p>
+                        <p>환경 분석 및 리소스 사이징<br>Legacy, Virtualization, HCI 등 요건과 환경에 적합한 인프라 형태 제안</p>
+                        <a href="">더 알아보기</a>
+                    </div>
+                    <div class="sec3atc2img2">
+                        <p><b>네트워크 인프라</b></p>
+                        <p>통합 IT 관점에서의 현장 분석<br>서비스 목적 및 규모에 따른 효율적인 설계</p>
+                        <a href="">더 알아보기</a>
+                    </div>
+                    <div class="sec3atc2img3">
+                        <p><b>데이터 보호 대책</b></p>
+                        <p>중요 데이터 자산 보호를 위한 유출 방지 체계 구현<br>시스템 및 네트워크 차원에서의 데이터 이동 통제 방안 제공</p>
+                        <a href="">더 알아보기</a>
+                    </div>
+                    <div class="sec3atc2img4">
+                        <p><b>보안 시스템</b></p>
+                        <p>엔드포인트 보안 S/W 제공<br>랜섬웨어 등 악의적인 표적 공격을 방어하는 보안 솔루션 제공</p>
+                        <a href="">더 알아보기</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sec3atc3">
+                <div>
+                    <button class="prev"><i class="fas fa-arrow-left"></i></button>
+                    <button class="next"><i class="fas fa-arrow-right"></i></button>
+                </div>
+            </article>
+        </section>
         <section class="page sec4"></section>
         <section class="page sec5"></section>
         <section class="page sec6"></section>
-        <footer class="page"></footer>
+        <footer class="page">
+            <div class="logo"><img src="/imgProject/logo_white.png" alt="logo"></div>
+            <div class="companyInfo">
+                <p>(주)이닛시스템</p>
+                <p>부산광역시 부산진구 중앙대로 749, 혜도빌딩 4층&nbsp;&nbsp;&nbsp;Tel.051-912-1000</p>
+                <p>COPYRIGHT INNOVIS SYSTEM ALL RIGHS RESERVED.</p>
+            </div>
+            <div class="question"><a href="">문의 바로가기</a></div>
+        </footer>
         <button class="goTop"><i class="fas fa-arrow-up"></i></button>
         <!--스크롤 위치 테스트-->
         <!-- <p class="test">scroll</p> -->
@@ -663,6 +857,7 @@
 
             });
 
+
             // 페이지 맨 위로 가는 버튼
             $(".goTop").click(function() {
                 $("html, body").animate({
@@ -683,14 +878,11 @@
                     }, 300);
                 }
             );
-            // $(".sec2atc3img1").hover(
-            //     function() {
-            //         $(".hide_p1").fadeIn();
-            //     },
-            //     function() {
-            //         $(".hide_p1").fadeout();
-            //     }
-            // );
+
+            // sec2 이벤트 - 창 크기가 작을 때 이벤트 제거
+            if($(window).width() < 1000) {
+                $(".upDiv").off();
+            }
 
             
         });
